Fixing spacing issues

--- a/src/app/checkout-component/checkout-component.component.css
+++ b/src/app/checkout-component/checkout-component.component.css
@@ -5,11 +5,10 @@ button{
     font-size: 100%;
 }
 mat-list-item{
-   text-align: center;
    font-weight: bold;
    margin-top:3%;
    margin-bottom:3%; 
-   border:1px solid black; 
+   border-bottom: 1px solid black;
 }
 html{
    background-image: url("../../assets/background.jpg");
@@ -17,12 +16,6 @@ html{
  background-size: cover;
 }
 
-.grid{
-   display:grid;
-   grid-template-columns: 100%;
-   justify-items: stretch;
-   align-items: stretch;
-}
 .cart{
    margin-right: 20%;
    background-color: rgba(255, 255, 255, 0.8);
@@ -30,15 +23,8 @@ html{
    margin-left: 20%; 
    text-align: center;
 }
-
 .split{
    display:grid;
-   grid-template-columns: 1fr 1fr 1fr;
-   justify-content: space-between;
-}
-.desc{
-   border:1px solid red;
-}
-.price{
-   border: 1px solid blue; 
+   grid-template-columns: repeat( 3, minmax(300px, 1fr) );
+   
 }
