--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -9,14 +9,13 @@ mat-list-item{
    font-weight: bold;
    margin-top:5%;
    margin-bottom:5%; 
+   display: grid;
+   grid-auto-rows: 1fr; 
 }
 .desc{
    color:black;
    font-size: 75%; 
-   padding-left: 2%;
    text-shadow: 1px 1px white;
-   padding-top:3%;
-  padding-bottom:3%; 
 }
 .wrapper{
    display:grid;
@@ -35,6 +34,7 @@ h1,h2,h3,h4,h5{
 .grid{
    display:grid;
    grid-template-columns: 80% 20%;
+
 }
 .cart{
    margin-right: 7%;
@@ -51,7 +51,6 @@ h1,h2,h3,h4,h5{
 }
 .remove{
 background-color:red;
-
 }
 .checkout{
 color:white;
@@ -60,4 +59,10 @@ background-color: #ff0000;
 .fifty{
    display:grid;
    grid-template-columns: 60% 40%;
+}
+.split{
+   display:grid; 
+   grid-template-columns: repeat( 3, minmax(25px, 1fr) );
+   grid-column-gap: 10px;
+   align-items: center;
 }
